# zignocchio

./: .gitignore  AGENTS.md  README.md  build.zig  build.zig.zon  jest.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
cli/: build.zig
cli/src/: commands.zig  main.zig  template.zig
client/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
client/src/: build.ts  index.ts  instruction.ts  layout.ts  litesvm.ts  pda.ts  surfpool.ts  types.ts
client/tests/: instruction.test.ts  layout.test.ts  litesvm-adapter.test.ts  pda.test.ts
docs/: 01-prd.md  02-architecture.md  03-technical-spec.md  04-task-breakdown.md  05-next-phase.md  06-client-architecture.md  backend-comparison.md  cu-summary.md  pinocchio-gap-analysis.md  runtime-composition.md
examples/: README.md  counter.test.ts  escrow.test.ts  hello.test.ts  token-vault.test.ts  vault.test.ts
examples/counter/: lib.zig
examples/counter-lazy/: lib.zig
examples/counter/tests/: surfpool.test.ts
examples/escrow/: accept.zig  lib.zig  make.zig  refund.zig
examples/escrow-lazy/: accept.zig  lib.zig  make.zig  refund.zig
examples/escrow/tests/: surfpool.test.ts
examples/hello-lazy/: lib.zig
examples/hello/tests/: surfpool.test.ts
examples/logonly/: lib.zig
examples/logonly-lazy/: lib.zig
examples/logonly/tests/: litesvm.test.ts
examples/noop/: lib.zig
examples/noop-lazy/: lib.zig
examples/noop/tests/: litesvm.test.ts
examples/pda-storage/: lib.zig  pda-storage.test.ts
examples/pda-storage-lazy/: lib.zig
examples/token-vault/: deposit.zig  initialize.zig  withdraw.zig
examples/token-vault-lazy/: deposit.zig  initialize.zig  lib.zig  withdraw.zig
examples/transfer-owned/: lib.zig
examples/transfer-owned-lazy/: lib.zig
examples/transfer-sol/: lib.zig  transfer-sol.test.ts
examples/transfer-sol-lazy/: lib.zig
examples/vault/: README.md  deposit.zig  withdraw.zig
examples/vault-lazy/: deposit.zig  lib.zig
sdk/: README.md  anti_patterns.md  cpi.zig  errors.zig  guard.zig  idioms.zig  lazy.zig  log.zig  pda.zig  runtime.zig  schema.zig  syscalls.zig  system.zig  types.zig  zignocchio.zig
sdk/sysvars/: clock.zig  fees.zig  instructions.zig  mod.zig  rent.zig
sdk/token/: account.zig  ata.zig  close_account.zig  mint.zig  mod.zig  transfer.zig
tests_agave/: Cargo.toml
tests_agave/examples/: counter.rs  counter_lazy.rs  escrow.rs  escrow_lazy.rs  hello.rs  hello_lazy.rs  logonly.rs  logonly_lazy.rs  noop.rs  noop_lazy.rs  pda_storage.rs  pda_storage_lazy.rs  token_vault.rs  token_vault_lazy.rs  transfer_owned.rs  transfer_owned_lazy.rs  transfer_sol.rs  transfer_sol_lazy.rs  vault.rs  vault_lazy.rs
tests_litesvm/: POC_REPORT.md  counter.litesvm.test.ts  escrow.litesvm.test.ts  hello-verify.litesvm.test.ts  hello.litesvm.test.ts  logonly.litesvm.test.ts  noop.litesvm.test.ts  pda-storage.litesvm.test.ts  token-vault.litesvm.test.ts  transfer-sol.litesvm.test.ts  vault.litesvm.test.ts
tests_rust/: Cargo.toml
tests_rust/examples/: counter.rs  counter_lazy.rs  escrow.rs  escrow_lazy.rs  hello.rs  hello_lazy.rs  logonly_lazy.rs  noop_lazy.rs  pda_storage.rs  pda_storage_lazy.rs  transfer_owned.rs  transfer_owned_lazy.rs  transfer_sol.rs  transfer_sol_lazy.rs  vault.rs  vault_lazy.rs
tools/: README.md  ci-fork-sbf.sh  ci-sbpf-linker.sh  compare-backends.sh  compare_backends.py  gen_syscalls.zig  with-solana-zig.sh
(+16 files in other folders)
